# WorkshopAthenaS3Glue

./: .env.example  README.md  pyproject.toml
consultas/: total_vendas.sql  vendas_por_data.sql
dados/: vendas.csv
workshop/: __init__.py  athena_query.py  etl_pipeline.py
